// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceOverview ResourceOverview renders  1`] = `
<div
  className="overview-content"
  id="resource-overview"
>
  <div
    className="app-info-and-dashboard-links"
  >
    <span
      className="app-info-and-dashboard-links-separator-f"
    />
  </div>
  <div
    className="overview-content-bottom overview-content-with-padding"
  >
    <div
      className="overview-cards-container"
    >
      <ul
        className="bx--accordion"
      >
        <li
          className="bx--accordion__item--active bx--accordion__item overview-cards-details-section"
          onClick={[Function]}
          onKeyPress={[Function]}
          open={true}
          role="presentation"
        >
          <button
            aria-expanded={true}
            className="bx--accordion__heading"
            onClick={[Function]}
            type="button"
          >
            <svg
              alt="Expand/Collapse"
              aria-label="Expand/Collapse"
              className="bx--accordion__arrow"
              fillRule="evenodd"
              height="12"
              role={null}
              viewBox="0 0 7 12"
              width="7"
            >
              <title>
                Expand/Collapse
              </title>
              <path
                d="M5.569 5.994L0 .726.687 0l6.336 5.994-6.335 6.002L0 11.27z"
              />
            </svg>
            <div
              className="bx--accordion__title"
            >
              Details
            </div>
          </button>
          <div
            className="bx--accordion__content"
          >
            <div
              className="details-col  add-right-border"
              id="left-col"
            >
              <div
                className="details-item"
              >
                <div
                  className="details-item-title left-item"
                >
                  Name
                </div>
                <div
                  className="details-item-content"
                >
                  samplebook-gbapp
                </div>
              </div>
              <div
                className="details-item"
              >
                <div
                  className="details-item-title left-item"
                >
                  Namespace
                </div>
                <div
                  className="details-item-content"
                >
                  sample
                </div>
              </div>
              <div
                className="details-item"
              >
                <div
                  className="details-item-title left-item"
                >
                  Created
                </div>
                <div
                  className="details-item-content"
                >
                  <p
                    className="bx--skeleton__text loading-skeleton-text"
                    style={
                      Object {
                        "width": "30%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              className="details-col"
            >
              <div
                className="details-item"
              >
                <div
                  className="details-item-title right-item"
                >
                  Clusters
                </div>
                <div
                  className="details-item-content"
                >
                  <p
                    className="bx--skeleton__text loading-skeleton-text"
                    style={
                      Object {
                        "width": "30%",
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="details-item"
              >
                <div
                  className="details-item-title right-item"
                >
                  Cluster resource status
                </div>
                <div
                  className="details-item-content"
                >
                  <p
                    className="bx--skeleton__text loading-skeleton-text"
                    style={
                      Object {
                        "width": "30%",
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="details-item"
              >
                <a
                  className="details-item-link"
                  href="/multicloud/search?filters={\\"textsearch\\":\\"kind%3Aapplication%20name%3Asamplebook-gbapp%20namespace%3Asample\\"}"
                  id="app-search-link"
                  rel="noreferrer"
                  target="_blank"
                >
                  <div>
                    Search resource
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="details-item-link-icon"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                        transform=""
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <div
        className="overview-cards-subs-section"
      >
        
        <button
          className="toggle-subs-btn bx--btn bx--btn--primary"
          disabled={true}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <p
            className="bx--skeleton__text loading-skeleton-text"
            style={
              Object {
                "width": "70%",
              }
            }
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="overview-content-bottom overview-content-with-padding"
  >
    <div
      className="resourceDiagramSourceContainer"
    >
      <div
        className="topology-controls"
      >
        <div
          className="topology-control-container"
        >
          <div
            id="search-textbox-portal-id"
          />
        </div>
      </div>
      <div
        className="resource-toolbar"
        id="resource-toolbar"
      >
        <div
          className="resource-toolbar-container"
        >
          <div
            className="resource-toolbar-buttons"
          >
            <div
              id="assorted-filter-open-portal-id"
            />
          </div>
          <div
            id="assorted-filter-close-portal-id"
          />
        </div>
      </div>
      <div
        className="resourceDiagramControlsContainer"
      >
        <div
          className="diagram-title"
        >
          Resource topology
          <svg
            className="diagram-title-divider"
          >
            <rect />
          </svg>
          <span
            className="how-to-read-text"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            How to read topology
            <svg
              className="how-to-read-icon"
            >
              <use
                href="#diagramIcons_sidecar"
              />
            </svg>
          </span>
        </div>
        <div
          className="topologyDiagramContainer"
        >
          <div
            className="refresh-time-div"
          >
            <div
              className="refresh-time-container"
            >
              <div
                className="reloading-container"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading bx--loading--small"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="refresh-time-selection"
              >
                <div
                  aria-label="Refresh"
                  className="button"
                  id="refreshButton"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Refresh"
                >
                  <svg
                    className="button-icon"
                  >
                    <use
                      href="#diagramIcons_autoRefresh"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Choose refresh"
                  className="bx--dropdown selection bx--list-box"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="listbox"
                  tabIndex="0"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="open menu"
                    className="bx--list-box__field"
                    data-toggle={true}
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex="0"
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                      htmlFor="refreshDropdown-input"
                    >
                      Disable refresh
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        alt="Open menu"
                        aria-label="Open menu"
                        fillRule="evenodd"
                        height="5"
                        role="img"
                        viewBox="0 0 10 5"
                        width="10"
                      >
                        <title>
                          Open menu
                        </title>
                        <path
                          d="M0 0l5 4.998L10 0z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                Last update: {0}
              </div>
            </div>
          </div>
          <div
            className="diagramViewerDiagram"
          >
            <div
              className="diagramViewerContainerContainer"
              id="diagram-viewer-container-container"
            >
              <div
                aria-label="zoom"
                className="diagramViewerContainer"
                role="region"
                style={
                  Object {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <svg
                  className="topologyDiagram"
                  id="topologySvgId"
                />
              </div>
              <div
                className="secondaryLoad"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="layoutLoadingContainer"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              className="diagramControls"
            >
              <div
                className="diagram-controls"
              >
                <div
                  aria-label="Zoom in"
                  className="zoom-in-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom in"
                >
                  <svg
                    className="icon"
                  >
                    <use
                      href="#diagramIcons_zoomIn"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Zoom out"
                  className="zoom-out-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom out"
                >
                  <svg
                    className="icon"
                  >
                    <use
                      href="#diagramIcons_zoomOut"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Zoom to fit"
                  className="zoom-target-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom to fit"
                >
                  <svg
                    className="icon_target"
                  >
                    <use
                      href="#diagramIcons_zoomTarget"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResourceOverview ResourceOverview renders spinner 1`] = `
<div
  className="overview-content"
  id="resource-overview"
>
  <div
    className="app-info-and-dashboard-links"
  >
    <span
      className="app-info-and-dashboard-links-separator-f"
    />
  </div>
  <div
    className="overview-content-bottom overview-content-with-padding"
  >
    <div
      className="overview-cards-container"
    >
      <ul
        className="bx--accordion"
      >
        <li
          className="bx--accordion__item--active bx--accordion__item overview-cards-details-section"
          onClick={[Function]}
          onKeyPress={[Function]}
          open={true}
          role="presentation"
        >
          <button
            aria-expanded={true}
            className="bx--accordion__heading"
            onClick={[Function]}
            type="button"
          >
            <svg
              alt="Expand/Collapse"
              aria-label="Expand/Collapse"
              className="bx--accordion__arrow"
              fillRule="evenodd"
              height="12"
              role={null}
              viewBox="0 0 7 12"
              width="7"
            >
              <title>
                Expand/Collapse
              </title>
              <path
                d="M5.569 5.994L0 .726.687 0l6.336 5.994-6.335 6.002L0 11.27z"
              />
            </svg>
            <div
              className="bx--accordion__title"
            >
              Details
            </div>
          </button>
          <div
            className="bx--accordion__content"
          >
            <div
              className="details-col  add-right-border"
              id="left-col"
            >
              <div
                className="details-item"
              >
                <div
                  className="details-item-title left-item"
                >
                  Name
                </div>
                <div
                  className="details-item-content"
                />
              </div>
              <div
                className="details-item"
              >
                <div
                  className="details-item-title left-item"
                >
                  Namespace
                </div>
                <div
                  className="details-item-content"
                />
              </div>
              <div
                className="details-item"
              >
                <div
                  className="details-item-title left-item"
                >
                  Created
                </div>
                <div
                  className="details-item-content"
                >
                  <p
                    className="bx--skeleton__text loading-skeleton-text"
                    style={
                      Object {
                        "width": "30%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              className="details-col"
            >
              <div
                className="details-item"
              >
                <div
                  className="details-item-title right-item"
                >
                  Clusters
                </div>
                <div
                  className="details-item-content"
                >
                  <p
                    className="bx--skeleton__text loading-skeleton-text"
                    style={
                      Object {
                        "width": "30%",
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="details-item"
              >
                <div
                  className="details-item-title right-item"
                >
                  Cluster resource status
                </div>
                <div
                  className="details-item-content"
                >
                  <p
                    className="bx--skeleton__text loading-skeleton-text"
                    style={
                      Object {
                        "width": "30%",
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="details-item"
              >
                <a
                  className="details-item-link"
                  href="/multicloud/search?filters={\\"textsearch\\":\\"kind%3Aapplication%20name%3Aundefined%20namespace%3Aundefined\\"}"
                  id="app-search-link"
                  rel="noreferrer"
                  target="_blank"
                >
                  <div>
                    Search resource
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="details-item-link-icon"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                        transform=""
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <div
        className="overview-cards-subs-section"
      >
        
        <button
          className="toggle-subs-btn bx--btn bx--btn--primary"
          disabled={true}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <p
            className="bx--skeleton__text loading-skeleton-text"
            style={
              Object {
                "width": "70%",
              }
            }
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="overview-content-bottom overview-content-with-padding"
  >
    <div
      className="resourceDiagramSourceContainer"
    >
      <div
        className="topology-controls"
      >
        <div
          className="topology-control-container"
        >
          <div
            id="search-textbox-portal-id"
          />
        </div>
      </div>
      <div
        className="resource-toolbar"
        id="resource-toolbar"
      >
        <div
          className="resource-toolbar-container"
        >
          <div
            className="resource-toolbar-buttons"
          >
            <div
              id="assorted-filter-open-portal-id"
            />
          </div>
          <div
            id="assorted-filter-close-portal-id"
          />
        </div>
      </div>
      <div
        className="resourceDiagramControlsContainer"
      >
        <div
          className="diagram-title"
        >
          Resource topology
          <svg
            className="diagram-title-divider"
          >
            <rect />
          </svg>
          <span
            className="how-to-read-text"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            How to read topology
            <svg
              className="how-to-read-icon"
            >
              <use
                href="#diagramIcons_sidecar"
              />
            </svg>
          </span>
        </div>
        <div
          className="topologyDiagramContainer"
        >
          <div
            className="refresh-time-div"
          >
            <div
              className="refresh-time-container"
            >
              <div
                className="reloading-container"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading bx--loading--small"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="refresh-time-selection"
              >
                <div
                  aria-label="Refresh"
                  className="button"
                  id="refreshButton"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Refresh"
                >
                  <svg
                    className="button-icon"
                  >
                    <use
                      href="#diagramIcons_autoRefresh"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Choose refresh"
                  className="bx--dropdown selection bx--list-box"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="listbox"
                  tabIndex="0"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="open menu"
                    className="bx--list-box__field"
                    data-toggle={true}
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex="0"
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                      htmlFor="refreshDropdown-input"
                    >
                      Disable refresh
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        alt="Open menu"
                        aria-label="Open menu"
                        fillRule="evenodd"
                        height="5"
                        role="img"
                        viewBox="0 0 10 5"
                        width="10"
                      >
                        <title>
                          Open menu
                        </title>
                        <path
                          d="M0 0l5 4.998L10 0z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                Last update: {0}
              </div>
            </div>
          </div>
          <div
            className="diagramViewerDiagram"
          >
            <div
              className="diagramViewerContainerContainer"
              id="diagram-viewer-container-container"
            >
              <div
                aria-label="zoom"
                className="diagramViewerContainer"
                role="region"
                style={
                  Object {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <svg
                  className="topologyDiagram"
                  id="topologySvgId"
                />
              </div>
              <div
                className="secondaryLoad"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="layoutLoadingContainer"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              className="diagramControls"
            >
              <div
                className="diagram-controls"
              >
                <div
                  aria-label="Zoom in"
                  className="zoom-in-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom in"
                >
                  <svg
                    className="icon"
                  >
                    <use
                      href="#diagramIcons_zoomIn"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Zoom out"
                  className="zoom-out-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom out"
                >
                  <svg
                    className="icon"
                  >
                    <use
                      href="#diagramIcons_zoomOut"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Zoom to fit"
                  className="zoom-target-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom to fit"
                >
                  <svg
                    className="icon_target"
                  >
                    <use
                      href="#diagramIcons_zoomTarget"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
